--- a/samples/periodical_uplink/prj.conf
+++ b/samples/periodical_uplink/prj.conf
@@ -21,9 +21,11 @@ CONFIG_LOG_BACKEND_UART=y
 
 CONFIG_SPI=y
 CONFIG_LR11XX_LIB=y
-# CONFIG_LR11XX_LOG_LEVEL_INF=y
+CONFIG_LR11XX_LOG_LEVEL_DBG=y
 
 CONFIG_LORA_BASICS_MODEM=y
+
+CONFIG_LORA_BASICS_MODEM_CRYPTOGRAPHY_SOFT=y
 
 #requirements for CONFIG_LORA_BASICS_MODEM
 CONFIG_REBOOT=y
