--- a/samples/periodical_uplink/prj.conf
+++ b/samples/periodical_uplink/prj.conf
@@ -22,9 +22,10 @@ CONFIG_LOG_BACKEND_UART=y
 CONFIG_SPI=y
 CONFIG_LR11XX_LIB=y
 CONFIG_LR11XX_LOG_LEVEL_DBG=y
+CONFIG_LR11XX_EVENT_TRIGGER_OWN_THREAD=y
 
 CONFIG_LORA_BASICS_MODEM=y
-
+CONFIG_LORA_BASICS_MODEM_GEOLOCATION=y
 CONFIG_LORA_BASICS_MODEM_CRYPTOGRAPHY_SOFT=y
 
 #requirements for CONFIG_LORA_BASICS_MODEM
