--- a/samples/periodical_uplink/prj.conf
+++ b/samples/periodical_uplink/prj.conf
@@ -26,7 +26,9 @@ CONFIG_LR11XX_EVENT_TRIGGER_OWN_THREAD=y
 
 CONFIG_LORA_BASICS_MODEM=y
 CONFIG_LORA_BASICS_MODEM_GEOLOCATION=y
+CONFIG_LORA_BASICS_MODEM_TIME_SYNC=y
 CONFIG_LORA_BASICS_MODEM_CRYPTOGRAPHY_SOFT=y
+CONFIG_LORA_BASICS_MODEM_LOG_LEVEL_DBG=y
 
 #requirements for CONFIG_LORA_BASICS_MODEM
 CONFIG_REBOOT=y
@@ -37,6 +39,8 @@ CONFIG_SETTINGS_NVS=y
 CONFIG_NVS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
 # some other source of randomness should be used in production
 CONFIG_TEST_RANDOM_GENERATOR=y
